fixed overflow

--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-    font-family: 'Poppins';
-    font-weight: 700; 
-
+  font-family: "Poppins";
+  font-weight: 700;
+  overflow: hidden;
 }
 
-.homepage{
+.homepage {
   display: flex;
   width: 100vw;
   height: 100vh;
@@ -24,8 +24,6 @@
   align-items: center;
 }
 
-
-
 .watch {
   width: 50%;
   height: 100vh;
@@ -35,6 +33,6 @@
   align-items: center;
 }
 
-.watch img{
+.watch img {
   height: 50%;
 }
